# v2-api

./: .dist.env  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  kalaxia.dist.env  kalaxia.env  schema.sql
.github/workflows/: build.yml  continuous-deployment.yml  rust_test.yml
doc/: index.raml  websockets.md
migrations/: 20210704180730_Initial_Migration_with_current_database_state.sql  20210717150214_Fleet_combat_data_for_the_new_workflow.sql  20210809114351_Communication_chat_message.sql  20210905010046_Player_Rankings.sql
src/: main.rs
src/extractor/: jwt.rs
src/game/: faction.rs  game.rs  global.rs  lobby.rs  mod.rs  player.rs  system.rs
src/game/combat/: combat.rs
src/game/communication/: chat.rs
src/game/fleet/: combat.rs  fleet.rs  formation.rs  mod.rs  ship.rs  squadron.rs  travel.rs
src/game/fleet/combat/: battle.rs  conquest.rs  mod.rs  round.rs
src/game/game/: game.rs  mod.rs  option.rs  server.rs  victory.rs
src/game/player/: mod.rs  player.rs  quest.rs  ranking.rs
src/game/ship/: mod.rs  model.rs  queue.rs  squadron.rs
src/game/system/: building.rs  mod.rs  planet.rs  system.rs
src/lib/: auth.rs  error.rs  log.rs  mod.rs  pagination.rs  sync.rs  time.rs  uuid.rs
src/middleware/: auth.rs
src/ws/: client.rs  protocol.rs  server.rs
