[package]
name = "kalaxia-api"
version = "0.1.0"
authors = ["Axel Venet <kern046@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ssl-secure = ["openssl", "actix-web/openssl"]
vendored = ["openssl", "openssl/vendored"]

[dependencies]
actix = "0.9.0"
actix-web = { version = "2.0" }
actix-web-actors = "2.0"
actix-rt = "1.1"
actix-files = "0.2.2"
rand = "0.7.3"
log = "0.4.8"
serde = "1.0.111"
uuid = { version = "0.8", features = ["v4", "serde"] }
jsonwebtoken = "7.1.1"
futures = "0.3.5"
actix-service = "1.0.5"
serde_json = "1.0.55"
openssl = { version = "0.10.30", optional = true }
env_logger = "0.7.1"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-async-std", "macros", "postgres", "json", "uuid", "chrono" ] }
refinery = "0.3.0"
sqlx-core = { version = "0.3.5", default-features = false, features = [ "runtime-async-std", "postgres", "json" ] }
galaxy-rs = { git = "https://github.com/ablanleuil/galaxy-rs", version = "1.2.1" }
petgraph = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.8", features = ["time", "sync"] }
